# adaptive-donated-data-analysis

./: .env.example  .gitignore  LICENSE  README.md  constants.py  llama_index_init.py  main.py  pyproject.toml  test_chatai_api.py  vllm_embeddings.py
data/: directory_structure_final.txt
experiments/: finalExperimentPrompt.py  firstExperiment.py  secondExperiment.py  secondExperimentPrompt.py  thirdExperiment.py  thirdExperimentPrompt.py
ground_truths/: JSON_structures.py
ground_truths/get_ground_truths/: getQuestion10Answers.py  getQuestion11Answers.py  getQuestion12Answers.py  getQuestion1Answers.py  getQuestion2Answers.py  getQuestion3Answers.py  getQuestion4Answers.py  getQuestion5Answers.py  getQuestion6Answers.py  getQuestion7Answers.py  getQuestion8Answers.py  getQuestion9Answers.py
processing/: fill_no_data.py  process_error_log.py  process_error_log2.py  rerun_nodata.py
processing/Visualizations/: First Experimental Phase Visualizations.ipynb  Second Experimental Phase Visualizations.ipynb
results/Final Experiment Prompt/: code_evaluation_log.csv  error_log.csv  nodata_results.csv  processed_error_log.csv  processed_result_evaluation_log.csv  result_evaluation_log.csv
results/First Experiment/: code_evaluation_log.csv  error_log.csv  nodata_results.csv  processed_error_log.csv  processed_result_evaluation_log.csv  result_evaluation_log.csv
results/Second Experiment Prompt/: code_evaluation_log.csv  error_log.csv  nodata_results.csv  (+3 more)
src/: dynamic_get_directory_structure.py  evaluations.py  get_directory_structure.py  helper.py
(+2620 files in other folders)
