[tool.poetry]
name = "chat-ai-llama-index-examples"
version = "0.1.0"
description = "Code samples for using the ChatAI API with llama-index."
authors = ["Jonathan Decker <jonathan.decker@uni-goettingen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.50.0"
llama-index = "^0.11.14"
llama-index-llms-openai-like = "^0.2.0"
llama-index-llms-vllm = "^0.2.0"
pytest = "^8.3.3"
radon = "^6.0.1"
lizard = "^1.17.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
